--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,14 +1,23 @@
 {% extends 'base.html' %}
 
 {% block title %}Sign Out{% endblock %}
+{% block page_title %}Sign Out{% endblock %}
 
 {% block content %}
-  <div class="container mt-4">
-    <h1>Sign Out</h1>
-    <p>Are you sure you want to sign out?</p>
-    <form method="post" action="{% url 'account_logout' %}">
-      {% csrf_token %}
-      <button type="submit" class="btn btn-primary">Sign Out</button>
-    </form>
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card shadow-sm border-0">
+          <div class="card-body p-5 text-center">
+            <h1 class="h3 mb-3">Sign Out</h1>
+            <p class="text-muted mb-4">Are you sure you want to sign out?</p>
+            <form method="post" action="{% url 'account_logout' %}">
+              {% csrf_token %}
+              <button type="submit" class="btn btn-primary btn-lg">Sign Out</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 {% endblock %}
