--- a/templates/partials/_carousel_bookings.html
+++ b/templates/partials/_carousel_bookings.html
@@ -1,6 +1,6 @@
 {% load static %}
 {# Booking page carousel (slideshow1..slideshow5) #}
-<div id="bookingCarousel" class="carousel slide" data-bs-ride="carousel" aria-label="Booking page slideshow">
+<div id="bookingCarousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#bookingCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#bookingCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
