--- a/templates/reviews/review_list.html
+++ b/templates/reviews/review_list.html
@@ -22,6 +22,13 @@
         {% endif %}
         <p class="card-text">{{ r.comment }}</p>
         <small class="text-muted">{{ r.created_at }}</small>
+        
+        {% if user.is_authenticated and r.user == user %}
+          <div class="mt-2">
+            <a href="{% url 'reviews:review_update' r.pk %}" class="btn btn-sm btn-outline-primary">Edit</a>
+            <a href="{% url 'reviews:review_delete' r.pk %}" class="btn btn-sm btn-outline-danger">Delete</a>
+          </div>
+        {% endif %}
       </div>
     </div>
   {% empty %}
