--- a/templates/partials/_carousel_bookings.html
+++ b/templates/partials/_carousel_bookings.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% static 'images/placeholder-food.svg' as PLACEHOLDER_FOOD %}
 {# Booking page carousel (slideshow1..slideshow5) #}
 <div id="bookingCarousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
@@ -10,19 +11,19 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{{ MEDIA_URL }}menu_images/slideshow1.jpg" class="d-block w-100" alt="Delicious pizza varieties with fresh toppings" width="1200" height="600" loading="eager">
+      <img src="{% static 'images/slideshow1.jpg' %}" class="d-block w-100" alt="Delicious pizza varieties with fresh toppings" width="1200" height="600" loading="eager" onerror="this.onerror=null;this.src='{{ PLACEHOLDER_FOOD }}';">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/slideshow2.jpg" class="d-block w-100" alt="Fresh pasta dishes with authentic Italian flavors" width="1200" height="600" loading="lazy">
+      <img src="{% static 'images/slideshow2.jpg' %}" class="d-block w-100" alt="Fresh pasta dishes with authentic Italian flavors" width="1200" height="600" loading="lazy" onerror="this.onerror=null;this.src='{{ PLACEHOLDER_FOOD }}';">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/slideshow3.jpg" class="d-block w-100" alt="Premium seafood and grilled specialties" width="1200" height="600" loading="lazy">
+      <img src="{% static 'images/slideshow3.jpg' %}" class="d-block w-100" alt="Premium seafood and grilled specialties" width="1200" height="600" loading="lazy" onerror="this.onerror=null;this.src='{{ PLACEHOLDER_FOOD }}';">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/slideshow4.jpg" class="d-block w-100" alt="Gourmet appetizers and starters" width="1200" height="600" loading="lazy">
+      <img src="{% static 'images/slideshow4.jpg' %}" class="d-block w-100" alt="Gourmet appetizers and starters" width="1200" height="600" loading="lazy" onerror="this.onerror=null;this.src='{{ PLACEHOLDER_FOOD }}';">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/slideshow5.jpg" class="d-block w-100" alt="Decadent desserts and sweet treats" width="1200" height="600" loading="lazy">
+      <img src="{% static 'images/slideshow5.jpg' %}" class="d-block w-100" alt="Decadent desserts and sweet treats" width="1200" height="600" loading="lazy" onerror="this.onerror=null;this.src='{{ PLACEHOLDER_FOOD }}';">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#bookingCarousel" data-bs-slide="prev">
