--- a/templates/partials/_slideshow.html
+++ b/templates/partials/_slideshow.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% static 'images/placeholder-food.svg' as PLACEHOLDER_FOOD %}
 {# Bootstrap carousel partial. Uses Bootstrap's JS (already included in base.html). #}
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
@@ -8,19 +9,19 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{{ MEDIA_URL }}menu_images/restaurant-slideshow1.jpg" class="d-block w-100" alt="Tomato bruschetta on crispy toast with fresh basil" width="1200" height="600" loading="eager">
+      <img src="{% static 'images/restaurant-slideshow1.jpg' %}" class="d-block w-100" alt="Tomato bruschetta on crispy toast with fresh basil" width="1200" height="600" loading="eager" onerror="this.onerror=null;this.src='{{ PLACEHOLDER_FOOD }}';">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/restaurant-slideshow2.jpg" class="d-block w-100" alt="Creamy parmesan pasta with herbs" width="1200" height="600" loading="lazy">
+      <img src="{% static 'images/restaurant-slideshow2.jpg' %}" class="d-block w-100" alt="Creamy parmesan pasta with herbs" width="1200" height="600" loading="lazy" onerror="this.onerror=null;this.src='{{ PLACEHOLDER_FOOD }}';">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/restaurant-slideshow3.jpg" class="d-block w-100" alt="Grilled salmon with seasonal vegetables" width="1200" height="600" loading="lazy">
+      <img src="{% static 'images/restaurant-slideshow3.jpg' %}" class="d-block w-100" alt="Grilled salmon with seasonal vegetables" width="1200" height="600" loading="lazy" onerror="this.onerror=null;this.src='{{ PLACEHOLDER_FOOD }}';">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/restaurant-slideshow4.jpg" class="d-block w-100" alt="Gourmet seafood platter" width="1200" height="600" loading="lazy">
+      <img src="{% static 'images/restaurant-slideshow4.jpg' %}" class="d-block w-100" alt="Gourmet seafood platter" width="1200" height="600" loading="lazy" onerror="this.onerror=null;this.src='{{ PLACEHOLDER_FOOD }}';">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/restaurant-slideshow5.jpg" class="d-block w-100" alt="Chef's special signature dish" width="1200" height="600" loading="lazy">
+      <img src="{% static 'images/restaurant-slideshow5.jpg' %}" class="d-block w-100" alt="Chef's special signature dish" width="1200" height="600" loading="lazy" onerror="this.onerror=null;this.src='{{ PLACEHOLDER_FOOD }}';">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
