Add Validation images and update error pages

--- a/templates/404.html
+++ b/templates/404.html
@@ -36,7 +36,7 @@
           </div>
 
           <hr class="my-4">
-          <p class="small text-muted">If you believe this is an error, please try again or return to the homepage.</p>
+          <p class="fw-bold text-muted">Error code: 404</p>
         </div>
       </div>
     </div>
