--- a/templates/500.html
+++ b/templates/500.html
@@ -27,7 +27,7 @@
           </div>
 
           <hr class="my-4">
-          <p class="small text-muted">Error code: 500</p>
+          <p class="fw-bold text-muted">Error code: 500</p>
         </div>
       </div>
     </div>
